--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -2,7 +2,7 @@
   border-radius: 5px;
   box-sizing: border-box;
   text-align: center;
-  background-color: #fff;
+  background-color: #f9f4f4;
   padding: 20px;
   width: 100%;
   max-width: 350px;
